# geoscience_language_models

./: LICENSE.md  LICENSE.txt  Minerals.csv  R.md  README  README.md
project_tools/: Data_Processing.md  Evaluation.md  Training.md  pyproject.toml
project_tools/data/: README.md
project_tools/embeddings/glove/: train.sh
project_tools/embeddings/mittens_scripts/: cooccur.py  run_mittens.py  train.py
project_tools/functions/: bert.py  bert_to_gensim.py  glove.py  utils.py
project_tools/notebooks/: Process_Full_Dataset_PDF.ipynb  README.md  metadata_parser.py
project_tools/notebooks/Evaluation_Extrinsic/: Keyword Prediction Evaluation Glove - model comparison.ipynb  Keyword Prediction Multiclass Evaluation BERT - model comparison.ipynb  Keyword Prediction Multiclass Evaluation BERT - subject comparison & error analysis.ipynb
project_tools/scripts/: README.md  combine_dataset.py  get_bert_eval_runs.py  get_glove_eval_runs.py  get_keras_eval_runs.py  get_model_info_from_jobid.sh  organize_model_folder.py  organize_model_folder.sh  pdf_to_txt.py  preprocess_csv_for_modelling.py  preprocess_unprocessed_pdfs.sh  preprocess_v2_pdfs.sh  preprocess_v2_pdfs_segment.sh  produce_vocab_counts.py  run_bert_evaluation.py  run_bert_evaluation_multi.sh  run_glove_evaluation_multi.sh  run_glove_keyword_evaluation.py  run_keras_evaluation_multi.sh  run_keras_keyword_evaluation.py  run_keras_rerun.sh  run_mittens.sh  run_preprocess_csv_for_modelling.py  run_preprocess_csv_for_modelling.sh  run_produce_vocab_counts.sh  run_train_glove_model.sh  split_data.py  train_glove_model.sh
(+81 files in other folders)
