[tool.poetry]
name = "nrcan_p2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.7.0"
matplotlib = "^3.3.2"
pandas = "^1.1.3"
plotly = "^4.12.0"
numba = "^0.51.2"
pyyaml = "^5.3.1"
cython = "^0.29.14"
numpy = "^1.19.3"
nltk = "^3.5"
notebook = "^6.1.4"
scikit-learn = "^0.23.2"
widgetsnbextension = "^3.5.1"
gensim = "^3.8.3"
seaborn = "^0.11.1"
pdfminer = "^20191125"
filelock = "^3.0.12"
pyarrow = "^2.0.0"
spacy = "^2.3.5"
Unidecode = "^1.1.2"
typing = "^3.7.4"
pathlib = "^1.0.1"
openpyxl = "^3.0.6"
striprtf = "^0.0.12"
pyenchant = "^3.2.0"
whatlies = "^0.5.10"
transformers = "4.2.2"
tokenizers = "^0.9.4"
xmlschema = "^1.4.2"
datasets = "^1.2.1"
tensorflow = "^2.4.1"
wandb = "^0.10.18"
langdetect = "^1.0.8"
tqdm = "4.49"
imbalanced-learn = "0.7.0"
Keras = "^2.4.3"
tensorflow-gpu = "^2.4.1"
mittens = "^0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
coverage = "^5.3.1"
pytest-cov = "^2.11.1"
nbdime = "^2.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
